Add command to run wihtout Eclipse.  Modify build.xml to allow module-based build